--- a/ChunkClaim/.classpath
+++ b/ChunkClaim/.classpath
@@ -2,5 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
+	<classpathentry kind="lib" path="/Users/nathan richman/Downloads/bukkit-1.4.7-R0.2-20130124.100820-7.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
